# Directionality-Project

electron-directionality/: CMakeLists.txt  directionality01.cc  electron.mac
electron-directionality/app/: CMakeLists.txt  directionality01.cc
electron-directionality/include/: CMakeLists.txt  DetectorConstruction.hh  HistoManager.hh  HitsAction.hh  MCParticle.hh  MCTruthManager.hh  RunAction.hh
electron-directionality/macros/: electron.mac  runall
electron-directionality/src/: CMakeLists.txt  DetectorConstruction.cc  DetectorConstruction.hh  EventAction.cc  EventAction.hh  HistoManager.cc  HitsAction.cc  MCParticle.cc  MCTruthManager.cc  Run.cc  RunAction.cc  SteppingAction.cc  TrackingAction.cc
src/: DetectorConstruction.cpp  DetectorConstruction.h
test_code/: root_macro.c
